--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,6 +105,7 @@ nav .nav-links {
 nav li {
     display: inline;
     padding: 0.8rem 1.1rem;
+    cursor: pointer;
 }
 nav a {
     text-decoration: none;
