--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,11 +23,10 @@ body {
 header {
     color: #fff;
     text-align: center;
-    background-image: linear-gradient( rgba(0,0,0,0.3), rgba(0, 0, 0, 0.3) ),url(/resources/background.png);
+    background-image: linear-gradient( rgba(0,0,0,0.3), rgba(0, 0, 0, 0.3) ),url(/resources/image0.jpeg);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center 65%;
-    height: 12rem;
+    background-position: center 25%;
+    height: 15rem;
 }
 
 .header-container {
@@ -153,103 +152,93 @@ nav a:hover {
 
 /*----------------------------------------------------------------*/
 #offer {
-    display: block;
-    width: 100%;
-    animation: fade-left 1s ease-in;
-}
-.offer-right{
+    animation: fade-up 1s ease-in;
+    display: flex;
     margin: auto;
-    margin-top: 2rem;
-    display: flex;
-    justify-content: space-around;
-    background-image:linear-gradient( rgba(0,0,0,0.2), rgba(0, 0, 0, 0.2) ), url(/resources/szkolne.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.offer-right ul {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    padding: 0%;
-    margin: 0;
-    height: 100%;
-    border-radius: 20px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-right: 3px solid rgba(255,255,255);
-
-}
-
-.offer-right ul li {
-    text-transform: uppercase;
-    font-weight: 600;
-    text-align:end;
-    justify-content: center;
-    flex-direction: column;
-    padding: 1rem;
-    margin: 1rem;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transition: all 0.6s;
-    cursor: pointer;
-
-
-}
-.offer-right ul li i {
-    font-size: 1.5rem;
-    margin-right:1rem ;
-
-}
-.offer-right ul li:hover {
-    color: #ffb703;
-}
-.offer-active {
-    color: #ffb703;
-}
-
-.offer-description{
-    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    max-width: 80vw;
+
+}
+
+.offer-container {
+    display: flex;
+    flex-wrap: wrap;
     padding: 0.5rem;
-    color: hsl(0, 0%, 0%);
-    max-width: 75%;
-    height: 100%;
-    border-radius: 20px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+    line-height: 3rem;
 }
-.offer-description h2 {
+
+.offer-header {
+    color: #414957;
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-bottom: 2rem;
-    text-align: center;
-    color: hsl(0, 0%, 100%);
-
-}
-
-.offer-description p {
-    height: 25rem;
-    font-size: 1.2rem;
-    text-align:left;
-    color: hsl(0, 0%, 0%);
-    padding: 1.5rem;
+    letter-spacing: 1px;
     margin-bottom: 1rem;
-    margin-top: 1rem;
-    letter-spacing: 2px;
-    line-height: 1.5;
+    text-align: center;
+}
+.offer-box {
+    margin: 2rem;
+    min-height: 22rem;
+    margin-left: auto;
+    box-shadow: 0px 12px 30px #0000001a;
+    border-radius: 36px;
+    margin-right: auto;
+    padding: 2rem;
+    padding-right: 0.5rem;
+    width: 48%;
+}
+.row{
+    display: flex;
+}
+.left-row {
+    width: 48%;
+}
+.left-row h4, .left-row i {
+    color: #005896;
+}
+.left-row >div >a {
+    text-decoration: none;
+
+}
+.left-row > div > p{
+    font-size: 1rem;
     font-weight: 400;
-    overflow: hidden;
-    background: rgba(255, 255, 255, 0.32);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    letter-spacing: 1px;
+    line-height: 2rem;
+
+}
+.right-row {
+    width: 48%;
+    align-self: flex-end;
+    text-align: right;
+}
+.right-row img {
+    width: 200px;
+    max-width: 100%;
+    height: auto;
 }
 
+.button {
+  display: flex;
+  align-items: center;
+  margin: 1rem;
+  margin-top: 2rem;
+  font-weight: 500;
+  padding: 0.7em 1.4em 0.7em 1.1em;
+  color: white;
+  background: linear-gradient(0deg, #2e82c2 0%, #0075c9 100%);
+  border: none;
+  box-shadow: 0 0.7em 1.5em -0.5em #142fa798;
+  letter-spacing: 0.05em;
+  border-radius: 20em;
+  cursor: pointer;
+}
+
+.button:hover {
+  box-shadow: 0 0.5em 1.5em -0.5em #000fd498;
+}
 /*----------------------------------------------------------------*/
 
 /* Partners */
@@ -374,13 +363,16 @@ nav a:hover {
 
 /*LAPTOP*/
 
-@media (max-width: 1200px) {
+@media (max-width: 1800px) {
 
     * {
         font-size: 14px;
     }
     .container {
         max-width: 960px;
+    }
+    #offer {
+        max-width: 90vw;
     }
 }
 
@@ -393,6 +385,7 @@ nav a:hover {
 .container {
     max-width: 720px;
 }
+
 
 header {
     height: 12rem;
@@ -501,49 +494,22 @@ nav {
 
 }
 #offer {
-    width: 98%;
+    max-width: 100vw;
+}
+.offer-container{
     display: block;
 }
-.offer-right {
-    display: block;
-    margin: auto;
-    margin-top: 2rem;
+.offer-box {
     width: 100%;
 }
-.offer-right ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 0;
-    border-right: none;
-
+.right-row {
+    width: 30%;
 }
-.offer-right ul li {
-    font-size: 0.7rem;
-    flex-direction: row;
+.left-row {
+    width: 70%;
 }
-.offer-description {
-    max-width: fit-content;
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 20px;
-}
-
-.offer-description h2 {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.offer-description p {
-    width: 95%;
-    font-size: 1.2rem;
-    line-height: 1.2;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    letter-spacing: 1px;
-
+.offer-box .right-row img {
+    width: 100px;
 }
 
 .partners-container {
@@ -568,7 +534,13 @@ nav {
 }
 
 
-
+.center {
+    text-align: center;
+    margin: auto;
+    display: block;
+    width: 100%;
+    padding: 1rem;
+}
 .reveal {
     position: relative;
     opacity: 0;
@@ -589,13 +561,13 @@ nav {
       opacity: 1;
     }
   }
-  @keyframes fade-left {
+  @keyframes fade-up {
     0% {
-      transform: translateX(-100px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
+        transform: translateY(-50px);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(0);
+        opacity: 1;
+      }
   }
