--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,7 +164,7 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 80vw;
+    max-width: 75vw;
 
 }
 
@@ -185,14 +185,13 @@ nav a:hover {
     text-align: center;
 }
 .offer-box {
-    margin: 2rem;
+    margin: 3rem;
     min-height: 22rem;
     margin-left: auto;
     box-shadow: 0px 12px 30px #0000001a;
     border-radius: 36px;
     margin-right: auto;
     padding: 2rem;
-    padding-right: 0.5rem;
     width: 48%;
 }
 .row{
@@ -430,6 +429,12 @@ nav a:hover {
 .about-container img {
     width: 400px;
 }
+.left-site{
+    margin-right: 2rem;
+}
+.right-site{
+    margin-right: 2rem;
+}
 .left-site h3, .right-site h3 {
     padding: 2rem;
     font-size: 2rem;
@@ -500,274 +505,275 @@ nav a:hover {
 
 /* TABLET */
 @media (max-width: 992px) {
-* {
-    font-size: 12px;
-}
-.container {
-    max-width: 720px;
-}
+    * {
+        font-size: 12px;
+    }
+    .container {
+        max-width: 720px;
+    }
 
 
-header {
-    height: 12rem;
-}
-nav {
-    display: none;
-}
-.mobile-menu {
-    display: block;
-}
-.menuItem {
-    display: block;
-    margin: 2rem 4rem;
-    font-size: 1.8rem;
-    color: white;
-    text-decoration: none;
-  }
-  
-  .menuItem:hover {
-    text-decoration: underline;
-  }
-  
-  .hamburger {
-    position: absolute;
-    z-index: 100;
-    right: 1rem;
-    top: 4rem;
-    padding: 4px;
-    cursor: pointer;
+    header {
+        height: 12rem;
+    }
+    nav {
+        display: none;
+    }
+    .mobile-menu {
+        display: block;
+    }
+    .menuItem {
+        display: block;
+        margin: 2rem 4rem;
+        font-size: 1.8rem;
+        color: white;
+        text-decoration: none;
+    }
+    
+    .menuItem:hover {
+        text-decoration: underline;
+    }
+    
+    .hamburger {
+        position: absolute;
+        z-index: 100;
+        right: 1rem;
+        top: 4rem;
+        padding: 4px;
+        cursor: pointer;
+    }
 
-  }
-  .hamburger i {
-    font-size: 2rem;
-  }
-  
-  .hamburger .closeIcon {
-    display: none;
-  }
-  
-  .menu {
-    position: fixed;
-    transform: translateY(-100%);
-    transition: transform 0.4s;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 20;
-    z-index: 99;
-    background: #005896;
-    color: white;
-    list-style: none;
-    padding-top: 3rem;
-  }
-  
-  .showMenu {
-    transform: translateY(0);
-  }
-.mobile-menu {
-    display: flex;
-}
-.mobile-menu i {
-    font-size: 2.5rem;
-    margin: 1rem;
-}
-.logo img {
-    width: 100px;
-}
-#company-description{
-    margin-top: 3rem;
-}
-.company-description-container h1 {
-    font-size: 2rem;
-}
+    .hamburger i {
+        font-size: 2rem;
+    }
 
-.company-description-container p {
-    font-size: 1rem;
-}
-.offer-container {
-    max-width: 100%;
-}
-.offer-description {
-    max-width: 90%;
-    padding: 0;
-}
-.offer-description p {
-    padding: 1rem;
-}
+    .hamburger .closeIcon {
+        display: none;
+    }
+    
+    .menu {
+        position: fixed;
+        transform: translateY(-100%);
+        transition: transform 0.4s;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 20;
+        z-index: 99;
+        background: #005896;
+        color: white;
+        list-style: none;
+        padding-top: 3rem;
+    }
+    
+    .showMenu {
+        transform: translateY(0);
+    }
+    .mobile-menu {
+        display: flex;
+    }
+    .mobile-menu i {
+        font-size: 2.5rem;
+        margin: 1rem;
+    }
+    .logo img {
+        width: 100px;
+    }
+    #company-description{
+        margin-top: 3rem;
+    }
+    .company-description-container h1 {
+        font-size: 2rem;
+    }
 
-.partners-container {
-    max-width: 80%;
-}
+    .company-description-container p {
+        font-size: 1rem;
+    }
+    .offer-container {
+        max-width: 100%;
+    }
+    .offer-description {
+        max-width: 90%;
+        padding: 0;
+    }
+    .offer-description p {
+        padding: 1rem;
+    }
 
-.partners-list img {
-    margin: 1rem;
-    width: 100px;
-}
-.offer-right ul li  {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+    .partners-container {
+        max-width: 80%;
+    }
+
+    .partners-list img {
+        margin: 1rem;
+        width: 100px;
+    }
+    .offer-right ul li  {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 /* PHONE */
 
 @media (max-width: 768px) {
-* {
-    font-size: 12px;
-}
-.container {
-    max-width: 540px;
-}
-header{
-    height: 10rem;
-}
-.header-container {
-    width: 100%;
-}
-.contact-info p {
-    font-size: 0.8rem;
-    padding-right: 3rem;
-}
-.contact-info p:last-child{
-    display: none;
-}
-.mobile-menu {
-    display: flex;
-}
-.mobile-menu i {
-    font-size: 2.5rem;
-    margin: 1rem;
-}
-.logo-container {
-    margin: auto;
-}
-.logo img {
-    width: 90px;
-    margin: 0.6rem;
-}
-.logo a {
-    border: none;
-}
-.logo a:hover {
-    border: none;
-}
-nav {
-    display: none;
-}
-.mobile-menu {
-    display: block;
-}
-.menuItem {
-    display: block;
-    margin: 2rem 4rem;
-    font-size: 1.8rem;
-    color: white;
-    text-decoration: none;
-  }
-  
-  .menuItem:hover {
-    text-decoration: underline;
-  }
-  
-  .hamburger {
-    position: absolute;
-    z-index: 100;
-    right: 1rem;
-    top: 4rem;
-    padding: 4px;
-    cursor: pointer;
+    * {
+        font-size: 12px;
+    }
+    .container {
+        max-width: 540px;
+    }
+    header{
+        height: 10rem;
+    }
+    .header-container {
+        width: 100%;
+    }
+    .contact-info p {
+        font-size: 0.8rem;
+        padding-right: 3rem;
+    }
+    .contact-info p:last-child{
+        display: none;
+    }
+    .mobile-menu {
+        display: flex;
+    }
+    .mobile-menu i {
+        font-size: 2.5rem;
+        margin: 1rem;
+    }
+    .logo-container {
+        margin: auto;
+    }
+    .logo img {
+        width: 90px;
+        margin: 0.6rem;
+    }
+    .logo a {
+        border: none;
+    }
+    .logo a:hover {
+        border: none;
+    }
+    nav {
+        display: none;
+    }
+    .mobile-menu {
+        display: block;
+    }
+    .menuItem {
+        display: block;
+        margin: 2rem 4rem;
+        font-size: 1.8rem;
+        color: white;
+        text-decoration: none;
+    }
+    
+    .menuItem:hover {
+        text-decoration: underline;
+    }
+    
+    .hamburger {
+        position: absolute;
+        z-index: 100;
+        right: 1rem;
+        top: 4rem;
+        padding: 4px;
+        cursor: pointer;
 
-  }
-  .hamburger i {
-    font-size: 2rem;
-  }
-  
-  .hamburger .closeIcon {
-    display: none;
-  }
-  
-  .menu {
-    position: fixed;
-    transform: translateY(-100%);
-    transition: transform 0.4s;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 20;
-    z-index: 99;
-    background: #005896;
-    color: white;
-    list-style: none;
-    padding-top: 3rem;
-  }
-  
-  .showMenu {
-    transform: translateY(0);
-  }
+    }
+    .hamburger i {
+        font-size: 2rem;
+    }
+    
+    .hamburger .closeIcon {
+        display: none;
+    }
+    
+    .menu {
+        position: fixed;
+        transform: translateY(-100%);
+        transition: transform 0.4s;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 20;
+        z-index: 99;
+        background: #005896;
+        color: white;
+        list-style: none;
+        padding-top: 3rem;
+    }
+    
+    .showMenu {
+        transform: translateY(0);
+    }
 
-.company-description-container h1 {
-    font-size: 1.5rem;
+    .company-description-container h1 {
+        font-size: 1.5rem;
 
-}
-#offer {
-    max-width: 100vw;
-}
-.offer-container{
-    display: block;
-}
-.offer-box {
-    width: 100%;
-}
-.right-row {
-    width: 30%;
-}
-.left-row {
-    width: 70%;
-}
-.offer-box .right-row img {
-    width: 100px;
-}
+    }
+    #offer {
+        max-width: 100vw;
+    }
+    .offer-container{
+        display: block;
+    }
+    .offer-box {
+        width: 100%;
+    }
+    .right-row {
+        width: 30%;
+    }
+    .left-row {
+        width: 70%;
+    }
+    .offer-box .right-row img {
+        width: 100px;
+    }
 
-.partners-container {
-    max-width: 90%;
-}
-.partners-container h2 {
-    font-size: 1.3rem;
-}
-.partners-list img {
-    margin: 1rem;
-    width: 75px;
-}
+    .partners-container {
+        max-width: 90%;
+    }
+    .partners-container h2 {
+        font-size: 1.3rem;
+    }
+    .partners-list img {
+        margin: 1rem;
+        width: 75px;
+    }
 
-.footer-center-left {
-    display: none;
-}
+    .footer-center-left {
+        display: none;
+    }
 
-.footer-center-right {
-    display: none;
-}
+    .footer-center-right {
+        display: none;
+    }
 
-.about-container {
-    display: block;
-}
-#about img {
-    width: 200px;
-    height: 200px;
-}
-.about-us {
-    display: block;
-    margin-bottom: 1rem;
-}
-.what-we-do img, .left-img img {
-    clip-path: ellipse(45% 45% at 50% 50%) !important;
-}
+    .about-container {
+        display: block;
+    }
+    #about img {
+        width: 200px;
+        height: 200px;
+    }
+    .about-us {
+        display: block;
+        margin-bottom: 1rem;
+    }
+    .what-we-do img, .left-img img {
+        clip-path: ellipse(45% 45% at 50% 50%) !important;
+    }
 
-.about-us p {
-    padding: 1rem;
-    margin: 1rem;
-}
+    .about-us p {
+        padding: 1rem;
+        margin: 1rem;
+    }
+
 }
 
 
@@ -794,16 +800,20 @@ nav {
     width: 100%;
     padding: 1rem;
 }
+
 .reveal {
     position: relative;
     opacity: 0;
-  }
-  .reveal.active {
+}
+
+.reveal.active {
     opacity: 1;
-  }
-  .active.fade-bottom {
+}
+
+.active.fade-bottom {
     animation: fade-bottom 1s ease-in;
-  }
+}
+
   @keyframes fade-bottom {
     0% {
       transform: translateY(50px);
