--- a/public/css/style.css
+++ b/public/css/style.css
@@ -350,14 +350,114 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
-    margin: 2rem;
-    border-radius: 0.5rem;
-    margin-top: 4rem;
-    font-family: 'Roboto Condensed';
-    height: 100vh;
+}
+#contact h2 {
+    margin-top: 2rem;
+}
+
+.maps-container  {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    }
+    .maps-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80%;
+    }
+
+.feedback-input {
+  color:rgb(0, 0, 0);
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid #005896;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width:100%;
+  box-sizing: border-box;
+  outline:0;
+  &:focus {
+    background-color: hsl(0, 0%, 90%); 
+  }
 
 }
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize:vertical;
+}
+
+[type="submit"] {
+  width: 100%;
+  background:#005896;
+  border-radius:5px;
+  border:0;
+  cursor:pointer;
+  color:white;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
+}
+
+[type="submit"]:hover {
+     background:#2e82c2;
+}
+
+.contact-form {
+    display: flex;
+    justify-content: space-between;
+    line-height: 3rem;
+    box-shadow: 0px 12px 30px #0000001a;
+    border-radius: 36px;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+}
+.vl {
+    border-left: 2px solid rgba(105, 105, 105, 0.411);
+    border-radius: 30rem;
+}
+.left-form {
+    width: 48%;
+}
+.right-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 40%;
+}
+.address {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    line-height: 3rem;
+}
+.address-box {
+    margin-top: 4rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 3rem;
+}
+.address-box i {
+    font-size: 2rem;
+    color: #005896;
+}
+
 /*----------------------------------------------------------------*/
 
 /* About page */
@@ -456,7 +556,9 @@ nav a:hover {
 /* FORMS */
 
 /*----------------------------------------------------------------*/
-
+#forms h2 {
+    margin-top: 2rem;
+}
 .form-links-list {
     display: flex;
     list-style: none;
@@ -480,6 +582,103 @@ nav a:hover {
     line-height: 3rem;
 
 }
+
+
+/*----------------------------------------------------------------*/
+
+/* Animation & Keyframes & Others */
+
+/*----------------------------------------------------------------*/
+
+#pageUp {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    color: #005896;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 3rem;
+  }
+
+  
+  #pageUp:hover {
+    text-shadow: 4px 4px 70px rgba(0, 42, 255, 1);
+  }
+
+
+.center {
+    text-align: center;
+    margin: auto;
+    display: block;
+    width: 100%;
+    padding: 1rem;
+}
+
+.reveal {
+    position: relative;
+    opacity: 0;
+}
+
+.reveal.active {
+    opacity: 1;
+}
+
+.active.fade-bottom {
+    animation: fade-bottom 1s ease-in;
+}
+
+  @keyframes fade-bottom {
+    0% {
+      transform: translateY(50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-up {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(0);
+        opacity: 1;
+      }
+  }
+
+  @keyframes fade-left {
+    0% {
+        transform: translateX(-50px);
+        opacity: 0;
+      }
+      100% {
+        transform: translateX(0);
+        opacity: 1;
+      }
+  }
+  @keyframes fade-right {
+    0% {
+        transform: translateX(50px);
+        opacity: 0;
+      }
+      100% {
+        transform: translateX(0);
+        opacity: 1;
+      }
+  }
+
+
+
+
+
+
 
 /*----------------------------------------------------------------*/
 
@@ -705,7 +904,7 @@ nav a:hover {
         background: #005896;
         color: white;
         list-style: none;
-        padding-top: 3rem;
+        padding-top: 0rem;
     }
     
     .showMenu {
@@ -774,85 +973,18 @@ nav a:hover {
         margin: 1rem;
     }
 
-}
-
-
-
-
-
-
-
-
-
-/*----------------------------------------------------------------*/
-
-/* Animation & Keyframes & Others */
-
-/*----------------------------------------------------------------*/
-
-
-
-
-.center {
-    text-align: center;
-    margin: auto;
-    display: block;
-    width: 100%;
-    padding: 1rem;
-}
-
-.reveal {
-    position: relative;
-    opacity: 0;
-}
-
-.reveal.active {
-    opacity: 1;
-}
-
-.active.fade-bottom {
-    animation: fade-bottom 1s ease-in;
-}
-
-  @keyframes fade-bottom {
-    0% {
-      transform: translateY(50px);
-      opacity: 0;
+    #pageUp {
+        right: 15px;
     }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
+
+    .contact-form {
+        display: block;
+
     }
-  }
-  @keyframes fade-up {
-    0% {
-        transform: translateY(-50px);
-        opacity: 0;
-      }
-      100% {
-        transform: translateY(0);
-        opacity: 1;
-      }
-  }
-
-  @keyframes fade-left {
-    0% {
-        transform: translateX(-50px);
-        opacity: 0;
-      }
-      100% {
-        transform: translateX(0);
-        opacity: 1;
-      }
-  }
-  @keyframes fade-right {
-    0% {
-        transform: translateX(50px);
-        opacity: 0;
-      }
-      100% {
-        transform: translateX(0);
-        opacity: 1;
-      }
-  }
-
+    .left-form, .right-form {
+        width: 100%;
+    }
+    .vl {
+        display: none;
+    }
+}
