--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,6 +170,8 @@ nav a:hover {
 
 .offer-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     padding: 0.5rem;
     line-height: 3rem;
@@ -192,8 +194,18 @@ nav a:hover {
     border-radius: 36px;
     margin-right: auto;
     padding: 2rem;
-    width: 48%;
+    width: 70%;
 }
+.splide__pagination__page {
+    background: #005896 !important;
+}
+.splide__arrow {
+    background: #005896 !important;
+}
+.splide__arrow svg {
+    fill: #fff !important;
+}
+
 .row{
     display: flex;
 }
@@ -927,17 +939,15 @@ textarea {
     #offer {
         max-width: 100vw;
     }
-    .offer-container{
-        display: block;
-    }
     .offer-box {
         width: 100%;
     }
     .right-row {
-        width: 30%;
+        width: 20%;
     }
     .left-row {
-        width: 70%;
+        width: 80%;
+        padding-left: 2rem;
     }
     .offer-box .right-row img {
         width: 100px;
