--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -68,7 +68,7 @@
                 <div class="left-form">
                     <h2>Formularz Kontaktowy</h2>
                     <form action="#" method="POST">   
-                        <input name="name" id="name" type="text" class="contact-input" placeholder="Imię"  />  
+                        <input name="name" id="name" type="text" class="contact-input" placeholder="Imię i Nazwisko"  />  
                          <% if(errors && errors.name) { %>
                             <span class="text-danger"><%= errors.name.msg %></span>
                             <% } %>
