--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,7 +162,7 @@ nav a:hover {
 
 /*----------------------------------------------------------------*/
 #offer {
-    animation: fade-up 1s ease-in;
+    animation: fade-up 0.75s ease-in;
     display: flex;
     margin: auto;
     flex-direction: column;
@@ -382,8 +382,8 @@ nav a:hover {
     font-weight: 500;
     gap: 0.2rem;
     padding: 2rem;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
     background-image: linear-gradient(180deg,#005896 0,rgba(18, 47, 68, 0.4) 4rem,rgba(255, 255, 255, 0.034) 8rem);
   }
   .footer-left a {
@@ -627,7 +627,7 @@ textarea {
     clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
 }
 .what-we-do {
-    animation: fade-up 1s ease-in;
+    animation: fade-up 0.75s ease-in;
 }
 /*----------------------------------------------------------------*/
 
@@ -820,7 +820,7 @@ textarea {
     margin-bottom: 25rem;
 }
 .active.fade-bottom {
-    animation: fade-bottom 1s ease-in;
+    animation: fade-bottom 0.75s ease-in;
 }
 
   @keyframes fade-bottom {
